Fixed property alignment on navigation pane.

--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -16,7 +16,7 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
 
 #studio-wrapper.blur-background { -webkit-filter: blur(3px); filter: blur(3px); }
 
-.navbar { background-color: #f5f5f5; margin: 0; padding: 0; border: 0; }
+.navbar { background-color: #f5f5f5; margin: 0; padding: 0; border: 0; border-radius: 0px }
 .navbar-btn { width: 40px; }
 .navbar-title { display: inline-block; font-size: 1.4em; line-height: 50px; margin: 0 0 0 20px; padding: 0; color: #737373; }
 .navbar-tabs { text-align: center; }
@@ -184,7 +184,7 @@ button.diagram-evaluating { color: #2ca02c; }
 .diagrams-menu-header { height: 50px; width: 100%; }
 
 .diagrams-menu-body {
-    background: darkgray;
+    background: lightgray;
     height: calc(100% - 125px);
     width: 100%;
     overflow-y: auto;
@@ -194,6 +194,7 @@ button.diagram-evaluating { color: #2ca02c; }
     background: white;
     margin: 10px;
     padding: 5px;
+    box-shadow: 0px 6px 12px rgba(0,0,0,0.400);
 }
 
 .diagrams-menu-body-item-name {
@@ -206,7 +207,7 @@ button.diagram-evaluating { color: #2ca02c; }
 
 .diagrams-menu-body-item-name:before { content: ""; display: inline-block; vertical-align: middle; height: 100%; }
 
-.diagrams-menu-body-item-name:hover { cursor: pointer; color: lightskyblue }
+.diagrams-menu-body-item-name:hover { cursor: pointer; color: #989898 }
 
 .diagrams-menu-body-item-options {
     height: 25px;
@@ -217,7 +218,6 @@ button.diagram-evaluating { color: #2ca02c; }
 
 .diagrams-menu-body-item-options-toggle {
     float: left;
-    padding: 5px;
     height: 25px;
     width: 90px;
     text-align: center;
@@ -226,7 +226,7 @@ button.diagram-evaluating { color: #2ca02c; }
 
 .diagrams-menu-body-item-options-toggle:before { content: ""; display: inline-block; vertical-align: middle; height: 100%; }
 
-.diagrams-menu-body-item-options-toggle:hover { cursor: pointer; }
+.diagrams-menu-body-item-options-toggle:hover { cursor: pointer; color: #989898; }
 
 .diagrams-menu-body-item-options-delete {
     float: right;
@@ -238,7 +238,7 @@ button.diagram-evaluating { color: #2ca02c; }
 
 .diagrams-menu-body-item-options-delete:before { content: ""; display: inline-block; vertical-align: middle; height: 100%; }
 
-.diagrams-menu-body-item-options-delete:hover { cursor: pointer; color: red }
+.diagrams-menu-body-item-options-delete:hover { cursor: pointer; color: #989898 }
 
 .diagrams-menu-body-item-info-container { opacity: 1; }
 
